--- a/style.css
+++ b/style.css
@@ -8,25 +8,11 @@ body {
     grid-template-rows: 30px auto;
 } */
 
-#title-bar {
-    -webkit-app-region: drag;
-    position: fixed;
-    top: 0;
-    /* right: 0; */
-    width: 550px;
-    height: 35px;
-    text-align: center;
-    line-height: 20px;
-    /* vertical-align: middle; */
-    background-color: #333333;
-    /* padding: none; */
-    /* margin: 0px; */
-}
-
 #content {
-    position: relative;
-    top: 35px;
-    height: 315px;
+    position: fixed;
+    bottom: 0px;
+    width: 600px;
+    height: 400px;
     /* padding: 320px; */
     text-align: center;
     /* line-height: 40px; */
@@ -35,11 +21,27 @@ body {
     margin: 0px;
 }
 
+#title-bar {
+    -webkit-app-region: drag;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 600px;
+    height: 32px;
+    text-align: center;
+    line-height: 20px;
+    /* vertical-align: middle; */
+    background-color: #333333;
+    /* padding: none; */
+    /* margin: 0px; */
+}
+
 #title {
     position: fixed;
-    top: 7px;
+    top: 6px;
     left: 12px;
     color: #DAD085;
+    font-size: 1.1em;
     font-family: Inconsolata,Monaco,Consolas,'Courier New',Courier,monospace;
 }
 
@@ -47,7 +49,7 @@ body {
     -webkit-app-region: no-drag;
     padding: 10px;
     position: fixed;
-    top: 7px;
+    top: 6px;
     right: 24px;
     width: 12px;
     cursor: pointer;
@@ -56,7 +58,7 @@ body {
 #close-btn {
     -webkit-app-region: no-drag;
     position: fixed;
-    top: 11px;
+    top: 10px;
     right: 7px;
     width: 12px;
     cursor: pointer;
