--- a/style.css
+++ b/style.css
@@ -3,37 +3,34 @@ body {
     margin: 0px;
 }
 
-/* #container {
-    display: grid;
-    grid-template-rows: 30px auto;
-} */
+p {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
 
-#content {
-    position: fixed;
-    bottom: 0px;
-    width: 600px;
-    height: 400px;
-    /* padding: 320px; */
-    text-align: center;
-    /* line-height: 40px; */
-    /* vertical-align: middle; */
+#container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     background-color: #252526;
-    margin: 0px;
 }
 
 #title-bar {
     -webkit-app-region: drag;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 600px;
+    flex: initial;
+    width: 100vw;
     height: 32px;
-    text-align: center;
-    line-height: 20px;
-    /* vertical-align: middle; */
     background-color: #333333;
-    /* padding: none; */
-    /* margin: 0px; */
+}
+
+#content {
+    flex: 1;
+    font-family: Inconsolata,Monaco,Consolas,'Courier New',Courier,monospace;
+    background-color: #252526;
+    color: #FFFFFF;
+    font-size: 1.1em;
+    padding: 12px;
 }
 
 #title {
